fix(streak): include latest date from FE